--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -236,6 +236,13 @@ img .profile {
   border-radius: 20px;
 }
 
+.search input[type=text] {
+  padding: 8px 7px 8px 7px;
+  font-size: 17px;
+  border: none;
+  border-radius: 10px;
+}
+
 /* Login Page */
 
 .overlay-white {
@@ -249,12 +256,12 @@ img .profile {
 
 .wrapper-form {
   width: 35%;
-  height: 340px;
   background-color: #fff;
   margin: auto;
   margin-top: 150px;
   border-radius: 10px;
   position: relative;
+  padding-bottom: 30px;
 }
 
 .form {
@@ -343,6 +350,12 @@ a.custom-card:hover {
   width: 100%;
 }
 
+a.dashboard-card,
+a.dashboard-card:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
 .card-konten {
   padding: 0 6%;
   border-radius: 20px;
@@ -428,7 +441,7 @@ a.custom-card:hover {
   box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
 }
 #profile-upload {
-  background-image: url("");
+  background-image: url("../images/default.png");
   background-size: cover;
   background-position: center;
   height: 160px;
