--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -477,8 +477,7 @@ a.dashboard-card:hover {
   box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
   margin-bottom: 3rem;
 }
-#profile-upload {
-  background-image: url("../images/default.png");
+.sampul {
   background-size: cover;
   background-position: center;
   height: 160px;
@@ -489,35 +488,8 @@ a.dashboard-card:hover {
   border-radius: 50%;
   overflow: hidden;
   float: left;
-  margin-right: 30px;
-  margin-bottom: 0px;
-}
-#profile-upload:hover input.upload {
-  display: block;
-}
-#profile-upload:hover {
-  border: 1px solid gray;
-}
-#profile-upload:hover .hvr-profile-img {
-  opacity: 1;
-}
-.hvr-profile-img {
-  opacity: 0.3;
-}
-
-#profile-upload input.upload {
-  z-index: 1;
-  left: 0;
-  margin: 0;
-  bottom: 0;
-  top: 0;
-  padding: 0;
-  opacity: 0;
-  outline: none;
-  cursor: pointer;
-  position: absolute;
-  width: 100%;
-  display: none;
+  margin-left: 40px;
+  margin-bottom: 2rem;
 }
 
 /* on Mobile */
